[package]
name = "egui-selectable-table"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = { version = "0.29.1", default-features = false, features = ["rayon"] }
egui_extras = { version = "0.29.1", default-features = false }
rayon = "1.10.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
nursery = { level = "deny", priority = 0 }
pedantic = { level = "deny", priority = 1 }
enum_glob_use = { level = "deny", priority = 2 }
perf = { level = "deny", priority = 3 }
style = { level = "deny", priority = 4 }
unwrap_used = { level = "deny", priority = 5 }

# might be useful to enable in the future
expect_used = { level = "allow", priority = 6 }
missing_panics_doc = { level = "allow", priority = 7 }
