[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
egui = "0.29.1"
egui-selectable-table = {path = ".."}
egui_extras = "0.29.1"
strum = "0.26.3"
strum_macros = "0.26.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"
